--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-    "name": "oureastudios/laravel5-braintree",
+    "name": "greatdg/laravel5-braintree",
     "description": "Braintree Service Provider for Laravel 5",
     "keywords": ["braintree","braintree laravel 5"],
-    "homepage": "https://github.com/oureastudios/laravel-braintree",
+    "homepage": "https://github.com/greatdg/laravel-braintree",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Brandon Lee",
+            "email": "greatdg@gmail.com",
+            "role": "Developer"
+        },
         {
             "name": "Tameem Safi",
             "email": "tameemsafi@live.co.uk",
@@ -20,7 +25,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "5.x",
-        "braintree/braintree_php": "2.x"
+        "braintree/braintree_php": "3.x"
     },
     "autoload": {
         "classmap": [
